修复bug，加入用户身份验证